これはMKV10のそーすを改造したものです。
判明バグ?;
コードを保存すると比較サーチがおかしくなる
コード保存と読込を繰り返していると保存読込機能が反応しなくなる
こーどが勝手に増殖することがある
ごく一部の浮動小数が表示されない 0x

this is modded mkultrav10.
KnownProblem;
doesnot work fine unknown value search after code save
if code is reloaded & saved many times,save&reload function doesnot work..
dupricated code agaist your will
これはMKV10のそーすを改造したものです。
判明バグ?;
コードを保存すると比較サーチがおかしくなる
コード保存と読込を繰り返していると保存読込機能が反応しなくなる
こーどが勝手に増殖することがある
ごく一部の浮動小数が表示されない 0x

this is modded mkultrav10.
KnownProblem;
doesnot work fine unknown value search after code save
if code is reloaded & saved many times,save&reload function doesnot work..
dupricated code agaist your will

2010/11/15
カラーファイルでボタン設定をできるようにした
JOKER吐き出しアドレスをASMぱっちなしに変更
NOTEボタンでのコード選択→チートにコピーを復活させた(DECODERでコピーメニュー□ボタン)
スクリーンショットON/OFF機能を追加(要コンパイル)
make -f Makefile_screenshot

add menukey/screeshotkey/codetoggle key by color setteing
no more need ASM H4CK,JOKER OUTPUT
DEC>TXT,DEC>CHEAT again,copier -> triangle,selet range by NOTE botton then use
added screeshot toggles(need compile)
make -f Makefile_screenshot

2010/11/14
UFLOAT 2バイトかつ&2,MFLOAT lui+addi/addiu/ori でレジスタが全部同じとき 
UPPERFLOAT(VALUE<<16),MERGEDFLOAT LUI+ADDI/ADDIU/ORI && ALL REGISTER SAME
unknown vfpu opcode 0xD039****

2010/11/13
コードえでぃたで奇数アドレスの時はニーモニック非表示,2バイトかつ&2の時は16BITシフトするようにした
vfim.sとluiの半浮動小数表示対応
ジャンプログ機能を追加した,△メニューで呼び出し可能,□を押すとクリア
no display when 1BYTMODE,2BYTE MODE shift 16bit in cheat edit menu.
support 16bit float for lui half_float(IEEE754),vfim.s vhalf_float(NOT IEE754,SONY SPECIAL?)
added jumped log for copier menu,default 32 address.PRESS SQUARE CLEAR

2010/11/12
vfpu_prefixも対応,0xD038を不明VFPUとした
support vprefix,unknown vfpu opcode 0xD038****

2010/11/11
違ってたやつを修正,vfpu_prefxiだけ未対応？
fixed cfpu,unsupport vprefix

2010/11/10
VFPUを強化,ジャンプ先の表示を絶対アドレスにした
support more VFPU,changed jumping destination to real address

2010/07/13
パッドコードに論理積マスク型を追加した。マスクの方は24BIT値が使用可能

added MASKED JOKER like CWC TYPE 0xD0
can be used 24bit Value for MASKED JOKER
