@@ -1,0 +1,5 @@
+copy MKIJIRO.prx MKIJIRO\MKIJIRO.prx
+pause
+del *.elf
+del objects\*.o
+move *.prx g:\seplugins\mkultra.prx
